--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-ble-manager": "^11.3.1",
+    "react-native-ble-plx": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
